--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,10 +22,11 @@
 }
 
 .navigateur{
-  margin-top: 25%;
-  border: #282c34;
+  margin-top: 100px;
+  margin-left: 60px;
   height: 100%;
-  border: 1px solid;
+  width: 150px;
+  
 }
 
 .container-fluid{
@@ -34,9 +35,8 @@
 }
 
 .dashboard{
-  border: 1px solid;
   color: #4d4d4d;
-
+  border-left: 1px solid;
 }
 .nb_h{
   margin-left: 5%;
@@ -65,3 +65,34 @@ h4{
   height: 110%;
 }
 
+.accueil{
+  width:85px;
+	height:85px;
+	background:#fafafa;
+	box-shadow:2px 2px 8px #aaa;
+	font:bold 13px Arial;
+	border-radius:50%;
+  color:#555;
+}
+
+.admin{
+
+  width:85px;
+	height:85px;
+	background:#fafafa;
+	box-shadow:2px 2px 8px #aaa;
+	font:bold 13px Arial;
+	border-radius:50%;
+	color:#555;
+}
+
+.camembert{
+  float: top;
+  border: 1px solid;
+}
+
+
+
+.tableau_cont{
+  width: 50%;
+}
